crates/es-fluent-derive/src/macros/derive_es_fluent_this/snapshots/es_fluent_derive__macros__derive_es_fluent_this__tests__expand_es_fluent_this_prefers_parent_fluent_namespace_over_this_namespace.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_this/mod.rs
assertion_line: 174
expression: tokens
---
impl ::es_fluent::ThisFtl for NamespacedThis {
    fn this_ftl<__EsFluentLocalizer: ::es_fluent::FluentLocalizer + ?Sized>(
        localizer: &__EsFluentLocalizer,
    ) -> String {
        ::es_fluent::__private::localize_this(
            localizer,
            env!("CARGO_PKG_NAME"),
            "namespaced_this_this",
        )
    }
}
#[doc(hidden)]
mod __es_fluent_this_inventory_namespaced_this {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::FtlVariant {
            name: "NamespacedThis",
            ftl_key: "namespaced_this_this",
            args: &[],
            module_path: module_path!(),
            line: line!(),
        },
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::FtlTypeInfo {
        type_kind: ::es_fluent::meta::TypeKind::Struct,
        type_name: "NamespacedThis",
        variants: VARIANTS,
        file_path: file!(),
        module_path: module_path!(),
        namespace: Some(
            ::es_fluent::registry::NamespaceRule::Literal(
                ::std::borrow::Cow::Borrowed("parent"),
            ),
        ),
    };
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
