crates/es-fluent-derive/src/macros/derive_es_fluent_this/snapshots/es_fluent_derive__macros__derive_es_fluent_this__tests__expand_es_fluent_this_returns_compile_errors_for_invalid_struct_namespace.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_this/mod.rs
expression: struct_tokens
---
::core::compile_error! {
    "Unexpected type `expected string literal, 'file', or 'folder'`"
}
