crates/es-fluent-derive/src/macros/derive_es_fluent_this/snapshots/es_fluent_derive__macros__derive_es_fluent_this__tests__expand_es_fluent_this_skips_inventory_when_origin_is_disabled.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_this/mod.rs
expression: tokens
---

