crates/es-fluent-derive/src/macros/derive_es_fluent_this/snapshots/es_fluent_derive__macros__derive_es_fluent_this__tests__expand_es_fluent_this_uses_enum_type_kind_for_enums.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_this/mod.rs
assertion_line: 204
expression: tokens
---
impl ::es_fluent::ThisFtl for LoginState {
    fn this_ftl<__EsFluentLocalizer: ::es_fluent::FluentLocalizer + ?Sized>(
        localizer: &__EsFluentLocalizer,
    ) -> String {
        ::es_fluent::__private::localize_this(
            localizer,
            env!("CARGO_PKG_NAME"),
            "login_state_this",
        )
    }
}
#[doc(hidden)]
mod __es_fluent_this_inventory_login_state {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::FtlVariant {
            name: "LoginState",
            ftl_key: "login_state_this",
            args: &[],
            module_path: module_path!(),
            line: line!(),
        },
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::FtlTypeInfo {
        type_kind: ::es_fluent::meta::TypeKind::Enum,
        type_name: "LoginState",
        variants: VARIANTS,
        file_path: file!(),
        module_path: module_path!(),
        namespace: None,
    };
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
