crates/es-fluent-derive/src/macros/derive_es_fluent_this/snapshots/es_fluent_derive__macros__derive_es_fluent_this__tests__expand_es_fluent_this_uses_struct_type_kind_for_structs.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_this/mod.rs
expression: tokens
---
impl :: es_fluent :: ThisFtl for LoginForm { fn this_ftl () -> String { :: es_fluent :: localize_in_domain (env ! ("CARGO_PKG_NAME") , "login_form_this" , None) } } # [doc (hidden)] mod __es_fluent_this_inventory_login_form { use super :: * ; static VARIANTS : & [:: es_fluent :: registry :: FtlVariant] = & [:: es_fluent :: registry :: FtlVariant { name : "LoginForm" , ftl_key : "login_form_this" , args : & [] , module_path : module_path ! () , line : line ! () , }] ; static TYPE_INFO : :: es_fluent :: registry :: FtlTypeInfo = :: es_fluent :: registry :: FtlTypeInfo { type_kind : :: es_fluent :: meta :: TypeKind :: Struct , type_name : "LoginForm" , variants : VARIANTS , file_path : file ! () , module_path : module_path ! () , namespace : None , } ; :: es_fluent :: __inventory :: submit ! (:: es_fluent :: registry :: RegisteredFtlType (& TYPE_INFO)) ; }
